# confidential-script-lib

./: Cargo.toml  Dockerfile.example  README.md
.github/workflows/: ci.yaml
examples/: Cargo.toml  README.MD
examples/src/: covenants_example.rs
src/: lib.rs
